Sculpt Box Hide Undo+Redo cause artifacts when using smooth shading #72721

Closed
opened 2019-12-27 06:33:22 +01:00 by Pasang Bomjan · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-26 19:15, hash: d35a319687
Worked: (optional)

Short description of error
After using box hide tool and doing Undo + Redo, it creates visible artifacts...

Exact steps for others to reproduce the error

  1. Open the attached blend file and in sculpt mode, use the box hide tool to hide a part of the mesh.
  2. Then Undo the last step and then Redo it.

Box Hide Undo Redo Bug.mp4

I get that issue in both of my machines. And I also checked by exporting and importing as an OBJ but always get the same case.
Here's the exact file.
Box Hide Undo Redo Bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-26 19:15, hash: `d35a319687` Worked: (optional) **Short description of error** After using box hide tool and doing Undo + Redo, it creates visible artifacts... **Exact steps for others to reproduce the error** 1. Open the attached blend file and in sculpt mode, use the box hide tool to hide a part of the mesh. 2. Then Undo the last step and then Redo it. [Box Hide Undo Redo Bug.mp4](https://archive.blender.org/developer/F8245647/Box_Hide_Undo_Redo_Bug.mp4) I get that issue in both of my machines. And I also checked by exporting and importing as an OBJ but always get the same case. Here's the exact file. [Box Hide Undo Redo Bug.blend](https://archive.blender.org/developer/F8245649/Box_Hide_Undo_Redo_Bug.blend)
Author

Added subscriber: @Pasang

Added subscriber: @Pasang

#73367 was marked as duplicate of this issue

#73367 was marked as duplicate of this issue

Added subscriber: @ronsn

Added subscriber: @ronsn

@Pasang Is that video you uploaded playing in your browser? Here on Linux in Chromium and Firefox it is not playable.

@Pasang Is that video you uploaded playing in your browser? Here on Linux in Chromium and Firefox it is not playable.
Author

@ronsn It should play in Chrome. But it sometimes doesn't play in Edge. Can you try downloading the video?

@ronsn It should play in Chrome. But it sometimes doesn't play in Edge. Can you try downloading the video?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm, looks like this here:
image.png

I can confirm, looks like this here: ![image.png](https://archive.blender.org/developer/F8248059/image.png)

@Pasang Downloading the video worked. I can confirm the issue too, but I couldn't reproduce it on other meshes with much higher poly count. Is this the only mesh, where that issue occurred?
Looks like art somehow
Bildschirmfoto vom 2019-12-28 15-08-55.png

@Pasang Downloading the video worked. I can confirm the issue too, but I couldn't reproduce it on other meshes with much higher poly count. Is this the only mesh, where that issue occurred? Looks like art somehow ![Bildschirmfoto vom 2019-12-28 15-08-55.png](https://archive.blender.org/developer/F8248203/Bildschirmfoto_vom_2019-12-28_15-08-55.png)
Author

@ronsn Curiously yes. It doesn't happen in any other meshes. Maybe something's wrong with it's mesh data. I tried with OBJ and FBX export-import but same issue.

@ronsn Curiously yes. It doesn't happen in any other meshes. Maybe something's wrong with it's mesh data. I tried with OBJ and FBX export-import but same issue.

@Pasang The Issue does not occur in Blender 2.79 but in Blender 2.80, so somewhere in between those versions there must be the commit which is responsible for that issue. Bad news is, I cannot compile Blender 2.79 on this machine to find the exact commit.
What kind of worked was to remesh the frog and maybe that might be a solution for you for now.

@Pasang The Issue does not occur in Blender 2.79 but in Blender 2.80, so somewhere in between those versions there must be the commit which is responsible for that issue. Bad news is, I cannot compile Blender 2.79 on this machine to find the exact commit. What kind of worked was to remesh the frog and maybe that might be a solution for you for now.
Pablo Dobarro changed title from Sculpt Box Hide Undo+Redo cause artifacts to Sculpt Box Hide Undo+Redo cause artifacts when using smooth shading 2020-01-09 20:11:39 +01:00
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

After investigating, the bug is not related to that particular mesh, It can also be reproduced by subdividing any other mesh to a point it creates multiple nodes and setting it to smooth shading.

If this is not fixed before, we may revisit this again after reviewing the design and merging the new visibility system in D6070, because that could also fix this issue.

After investigating, the bug is not related to that particular mesh, It can also be reproduced by subdividing any other mesh to a point it creates multiple nodes and setting it to smooth shading. If this is not fixed before, we may revisit this again after reviewing the design and merging the new visibility system in [D6070](https://archive.blender.org/developer/D6070), because that could also fix this issue.

Added subscriber: @Facu

Added subscriber: @Facu

This issue was referenced by f4411b58ad

This issue was referenced by f4411b58ade1d4d0921243756ecd3499e8d11cd2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-02-25 19:02:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72721
No description provided.